--- a/appreact/src/App.css
+++ b/appreact/src/App.css
@@ -1,2 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
+.App {
+  
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
+code {
+  font-family: "Nunito Sans", sans-serif;
+}
+
+.banner{
+    
+    height:200px;
+    background-image: url(../public/images/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
